--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.11.7",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "swagger-jsdoc": "^6.0.0-rc.4",
     "swagger-ui-express": "^4.1.5",
     "uuidv4": "^6.2.6",
